# portero_opi_v2

./: .gitignore  readme.md
docker_opi_servers/: docker-compose.yml
docker_opi_servers/decode_server/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  Server.cpp  cmake_install.cmake
docker_opi_servers/rusty_server/: .env  Cargo.toml  Dockerfile  ORM.md  docker-compose.dev.yaml  docker-compose.yaml
docker_opi_servers/rusty_server/client/: index.html  package-lock.json  package.json
docker_opi_servers/rusty_server/client/src/: App.tsx  main.tsx
docker_opi_servers/rusty_server/client/src/api/: BarCode.ts
docker_opi_servers/rusty_server/client/src/atomic/atoms/: NavbarLink.tsx
docker_opi_servers/rusty_server/client/src/atomic/organisms/: CameraFeed.tsx
docker_opi_servers/rusty_server/client/src/layouts/: MainLayout.tsx
docker_opi_servers/rusty_server/client/src/pages/: Camera.tsx
docker_opi_servers/rusty_server/client/src/style/: MainLayout.module.scss
docker_opi_servers/rusty_server/migration/src/: lib.rs  m20230815_175727_users_table.rs
docker_opi_servers/rusty_server/public/: app.js  camera.js  index.html  qr_renderer.js  style.css  utils.js
docker_opi_servers/rusty_server/src/: main.rs  utils.rs
docker_opi_servers/rusty_server/src/entities/: mod.rs  prelude.rs  users.rs
docker_opi_servers/rusty_server/src/esp_comm/: mod.rs
docker_opi_servers/rusty_server/src/frame_receiver/: mod.rs
docker_opi_servers/rusty_server/src/qr_scanner/: mod.rs
docker_opi_servers/rusty_server/src/web_server/: error.rs  mod.rs  utils.rs
docker_opi_servers/rusty_server/src/web_server/controllers/: action_controller.rs  mod.rs  users_controller.rs  ws_controller.rs
docker_opi_servers/web_server/: .gitignore  Dockerfile  app.js  index.html  index.js  package-lock.json  package.json
opi_clients/camara_csi/: CMakeLists.txt  Client.cpp  PracticalSocket.cpp  client  (+2 more)
