[package]
name = "rusty_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.20", features = ["macros", "ws", "tracing"] }
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3.28"
opencv = "0.84.5"
tokio = { version = "1.30.0", features = ["full"] }
tower-http = { version = "0.4.3", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
