[package]
name = "rusty_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.20", features = ["macros", "ws", "tracing", "headers"] }
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3.28"
image = "0.24.7"
sea-orm = { version = "0.12.2", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-chrono", "with-json"] }
serde = { version = "1.0.183", features = ["derive", "rc"] }
serde_json = "1.0.104"
tokio = { version = "1.30.0", features = ["full"] }
tower-http = { version = "0.4.3", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
zbar-rust = "0.0.21"

migration = { path = "migration" }
